# whisper-term

./: .gitignore  README.md  main.py  pyproject.toml
ai_docs/: README.md
ai_docs/ideas/: README.md  better-terminal-ui-with-inquirer.md  direct-cli-with-clipboard.md
ai_docs/investigations/: README.md  local-whisper-model.md
ai_docs/iterations/: README.md
ai_docs/iterations/0000-template/: design.md  investigation.md  technical_change_plan.md
ai_docs/iterations/0001-basic-recording-transcription/: design.md  investigation.md  reflection.md  technical_change_plan.md
ai_docs/iterations/0002-direct-cli-clipboard/: design.md  investigation.md  reflection.md  technical_change_plan.md
ai_docs/templates/: idea_template.md  iteration_template.md
ai_docs/vision/: vision.md
src/whisper_term/: __init__.py  app.py  audio_recorder.py  clipboard.py  direct_mode.py  file_manager.py  main.py  models.py  session_manager.py  transcription_engine.py
